# onepassword-python

./: .gitignore  Dockerfile  LICENSE  README.md  onepassword.py  pyproject.toml
examples/: getting_document_content.py
