[tool.poetry]
name = "onepassword"
version = "0.1.0"
description = "Python wrapper for the 1password CLI"
authors = ["Gabriel Chamon Araujo <gchamon@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
