[tool.poetry]
name = "onepassword"
version = "0.1.6"
description = "Python wrapper for the 1password CLI"

repository = "https://github.com/lettdigital/onepassword-python"
homepage = "https://github.com/lettdigital/onepassword-python"

authors = ["Gabriel Chamon Araujo <gchamon@live.com>"]
license = "MIT"

readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
